syntax = "proto3";

package go.micro.srv.consigment;

service ShippingService {
    rpc CreateConsignment (Consignment) returns (Response);
}

message Consignment {
    string id = 1;
    string description = 2;
    int32 weight = 3;
    int32 containers_number = 4;
    string vessel_id = 5;
}

message Response {
    Consignment consigment = 2;
    repeated Consignment consigments = 3;
}